--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
     box-sizing: border-box;
 }
 
-.nav {
+.logo {
     position: fixed;
     z-index: 10;
     left: 0;
@@ -12,5 +12,16 @@ body {
     top: 0;
     font-family: Arial, Helvetica, sans-serif;
     padding: 0 5%;
-    background-color: blue;
+    background-color: rgb(142, 206, 227);
+}
+
+.navbar ul {
+    float: right;
+    padding: 0;
+    margin: 0;
+    width: 60%;
+    height: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
