--- a/style.css
+++ b/style.css
@@ -25,3 +25,11 @@ body {
     justify-content: space-between;
     align-items: center;
 }
+
+.btn-1 {
+    background-color: blue;
+    margin:0;
+    border-radius: 5px;
+    padding: 10px;
+    display: block;
+}
