--- a/style.css
+++ b/style.css
@@ -1,7 +1,12 @@
-body {
+/* body {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+} */
+
+.menu.container {
+    display: block;
+    justify-content: center;
 }
 
 .logo {
