--- a/style.css
+++ b/style.css
@@ -1,4 +1,22 @@
 
-.menu.container {
-    display: block;
+
+.logo{
+   position: fixed;
+   z-index: 10;
+   left: 0;
+   right: 0;
+   
+
+
+
 }
+
+
+.btn-1 {
+    padding: 5px;
+    background-color: aqua;
+    border-radius: 5px;
+ 
+    
+}
+
