--- a/style.css
+++ b/style.css
@@ -1,29 +1,24 @@
 
-
 * {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
-
-
 }
 
 body {
-    background: #bfe6f1;
     width: auto;
     height: auto;
+    background: #bfe6f1;
 }
 
-@media screen and (min-width: 330px){
-
-    .head {
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        height: 4.0625rem;
-        background-color: #bfe6f1;
-        width: 100%;
-        z-index: 100;
-    }}
+.head {
+    width: 100%;
+    height: 4.0625rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #bfe6f1;
+    z-index: 100;
+}
 
 .navbar {
     display: flex;
@@ -36,14 +31,14 @@ body {
 
 .menu a {
     text-decoration: none;
-    color: black;
     text-transform: uppercase;
+    color: black;
     font-weight: bolder;
 }
 
 .btn-1 {
-    border-radius: 25px;
     background-color: aqua;
+    border-radius: 25px;
     color: white;
     padding: 10px 15px;
     font-size: 20px;
@@ -52,21 +47,20 @@ body {
 
 .navbar a {
     display: block;
-    padding: 20px 20px;
     color: black;
+    padding: 20px 20px;
     text-decoration: none;
-    font-size: 15px;
     font-weight: lighter;
+    font-size: 15px;
 }
 
 .header-content {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    background: rgb(49, 49, 132);
     width: auto;
     height: 700px;
-    
+    display: flex;
+    background: rgb(49, 49, 132);
+    flex-direction: column;
+    justify-content: center;    
 }
 
 .content {
@@ -99,9 +93,9 @@ body {
 /* ----cuerpo---- */
 
 .container-element {
-    background: white;
     width: auto;
     height: auto;
+    background: white;
     text-align: center;
     justify-content: space-around;
 }
